# StarkFinder

./: .dockerignore  .env.docker.example  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  Design.md  Dockerfile  Dockerfile.agent  Dockerfile.backend  Dockerfile.py-be-test  Makefile  README.md  RESEARCH.MD  Research.MD  SCARB_GENERATOR_IMPROVEMENTS.md  UPDATED README.md  bash_commands.txt  docker-compose.yml  fetch_data.py  package-lock.json  package.json  proj_struct.txt  pyproject.toml  run-all-agents.js  tatus  tsconfig.json  update_readme.py
anon/backend/: .env.example  Cargo.toml  Dockerfile  run_tests.sh
anon/backend/.sqlx/: query-613dec2d46124070791f50ad38f90a5907a5195552b9f9dc4a971d792e0e1362.json  query-6b7ecd5e7c48f4bb8e7af37eca945d527d6c3ee503d73906648dd4a94e718427.json  query-8e7adb4e304111b90fa60f62b62d246394c8b0ac9bc6b96524e41d2bbb0f14ef.json  query-949a44457416ff9332fea3f100f3d1c7091d6c9a577990afde278605acf6a849.json  query-982d51b229178b33575c9deb29fc7fe444fd9f611669c1b512e6cdf246f5664f.json  query-ac8874076611d27bb4aae32698288d452dd9b6449d02850bd2679b5ec1cf1b3c.json  query-b707709a22a18789f9a669e08eaedfffd266dfc74473001b257bf99c12fd99b2.json  query-bbf600f17712173206b754fd7c8f8f8fd46a03bf54e824ff8046c37a88407123.json  query-bc6a7d4aa7bff78a116284fba918c174f2a20b1c48aebe5b17ade6db7c19d61b.json  query-c00f8dc7280d18cf8760ba9f6186354dd304d241ebb2d29fc9a12c47f796b841.json  (+1 more)
anon/backend/src/: lib.rs  (+1 more)
py-be/: pyproject.toml  run_tests.sh
py-be/scripts/: deploy.py
py-be/tests/: conftest.py  test_deployed_contracts.py  test_deployed_contracts_complete.py  test_deployed_contracts_integration.py  test_deployed_contracts_simple.py  test_generate.py  test_generated_contracts.py
(+714 files in other folders)
