[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json",  "time"] }
dotenvy = "0.15.7"
thiserror = "2.0.16"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "json"] }
starknet = "0.15.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
async-trait = "0.1.89"

[dev-dependencies]
sqlx-cli = { version = "0.8.2", features = ["native-tls", "postgres"] }
axum-test = "18.0.0"
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0.143"